fixed get all bookings for route